WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297895
[UnifiedPDF] VoiceOver does not recognize the password form
https://bugs.webkit.org/show_bug.cgi?id=297895
Summary
[UnifiedPDF] VoiceOver does not recognize the password form
Abrar Rahman Protyasha
Reported
2025-08-26 03:16:56 PDT
rdar://155907450
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2025-08-26 11:17:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49897
EWS
Comment 2
2025-08-26 18:29:06 PDT
Committed
299180@main
(0d359e074687): <
https://commits.webkit.org/299180@main
> Reviewed commits have been landed. Closing PR #49897 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug